# rabbitmq-python

./: README.md  pyproject.toml
docker/: .env  docker-compose.yml  entrypoint.sh
src/application/dead_letter_queue/: consumer_appchat.py  consumer_appchat_dlq.py  publisher.py
src/application/direct/: consumer_appchat.py  consumer_sms.py  exchange.py  publisher.py
src/application/fanout/: consumer_appchat.py  consumer_sms.py  exchange.py  publisher.py
src/application/header/: consumer_report_pdf.py  consumer_reports.py  consumer_txt.py  exchange.py  publisher.py
src/application/topic/: consumer_all.py  consumer_debug.py  consumer_error.py  consumer_info.py  consumer_warning.py  exchange.py  publisher.py
src/rabbitmq/: channel.py  connection.py  consumer.py  exchange.py  publisher.py  queue.py
