[tool.poetry]
name = "rabbitmq-python"
version = "0.1.0"
description = ""
authors = ["Edeilson David <sam@example.com>"]
readme = "README.md"
packages = [{ from = "src", include = "rabbitmq-python" }]

[tool.poetry.dependencies]
python = "3.10.13"
pika = "1.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
